--- a/leadership.html
+++ b/leadership.html
@@ -165,7 +165,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заступниця директора з зовнішньоекономічної діяльності</div>
-                  <a href="pablick/руководство/cv/СV_Лемішенко.doc" class="people-name" target="blanck">Лемішенко Ірина Генадіївна</a>
+                  <a href="pablick/руководство/cv/СV_Лемішенко.pdf" class="people-name" target="blanck">Лемішенко Ірина Генадіївна</a>
                 </div>
                 <div class="people-contact">
                   <a href="#peole-contact-holder-4" class="people-contact-link" uk-toggle="target: #peole-contact-holder-4; animation: uk-animation-fade">Контакти</a>
