--- a/olc.html
+++ b/olc.html
@@ -176,7 +176,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/23/cv/CV_Вовк Олег_Відділ 23.pdf" class="people-name" target="blanck">Вовк Олег Михайлович </a>
-                  <p>старший науковий співробітник, кандидат хімічних наук, старший дослідник</p>
+                  <p>Старший науковий співробітник, кандидат хімічних наук, старший дослідник</p>
                 </div>
                 <div class="people-contact">
                   <a href="#vovkom-contact-holder" class="people-contact-link" uk-toggle="target: #vovkom-contact-holder; animation: uk-animation-fade">Контакти</a>
