--- a/scientific-achievements.html
+++ b/scientific-achievements.html
@@ -216,12 +216,12 @@
                     (Y<sub>0,99</sub>Eu<sub>0,01</sub>)<sub>2</sub>O<sub>3</sub>. Оптична прозорість нанокерамік (Т&asymp;60% при &lambda;=1000 нм)
                     реалізується для середнього розміру зерен 12 нм, за якого внесок
                     розсіювання світла на міжфазних межах є мінімальним. <a href="http://dx.doi.org/10.1016/j.ceramint.2013.09.072" target="blank">http://dx.doi.org/10.1016/j.ceramint.2013.09.072</a>.</li>
-                  <li>У прозорій двофазній нанокераміці С<sub>куб.</sub>&rarr;В<sub>монокл.</sub> (Y<sub>0,99</sub>Eu<sub>0,01</sub>)<sub>2</sub>O<sub>3</sub> визначено
+                  <li>У прозорій двофазній нанокераміці С<sub>куб.</sub>+В<sub>монокл.</sub> (Y<sub>0,99</sub>Eu<sub>0,01</sub>)<sub>2</sub>O<sub>3</sub> визначено
                     структуру активаторних центрів фотолюмінесценції. Емісія кераміки
                     обумовлена розгалуженням каналів випромінювальної релаксації
                     електронних збуджень між іонами Eu<sup>3+</sup> у кубічній і моноклінній
                     модифікаціях. Виявлено нову широкосмугову люмінесценцію кераміки
-                    С<sub>куб.</sub>&rarr;В<sub>монокл.</sub><sub>2</sub>O<sub>3</sub> в діапазонах 535-630 і 680-720 нм, що відповідає світінню
+                    С<sub>куб.</sub>+В<sub>монокл.</sub><sub>2</sub>O<sub>3</sub> в діапазонах 535-630 і 680-720 нм, що відповідає світінню
                     «збурених» іонів Eu3+, розташованих поблизу границь зерен.
                     <a href="https://doi.org/10.1016/j.optmat.2018.02.034" target="blank">https://doi.org/10.1016/j.optmat.2018.02.034</a>.</li>
                   <li>Здійснено модифікацію процесів дифузійного масопереносу при
@@ -238,14 +238,12 @@
                     внаслідок реалізації оптимальної просторової конфігурації частинок у
                     компакті, зменшення довжин гетеродифузії іонів та тривалого збереження
                     активності системи за рахунок формування міжчастинкових контактів із
-                    високою кривизною поверхні. <a href="http://dx.doi.org/10.1016/j.jcrysgro.2014.01.034;
-                    http://dx.doi.org/10.1016/j.jcrysgro.2014.01.034" target="blank">http://dx.doi.org/10.1016/j.jcrysgro.2014.01.034;
-                    http://dx.doi.org/10.1016/j.jcrysgro.2014.01.034</a>.</li>
+                    високою кривизною поверхні. <a href="http://dx.doi.org/10.1016/j.jcrysgro.2014.01.034" target="blank">http://dx.doi.org/10.1016/j.jcrysgro.2014.01.034</a>; <a href="http://dx.doi.org/10.1016/j.jcrysgro.2014.01.034" target="blank"> http://dx.doi.org/10.1016/j.jcrysgro.2014.01.034</a>.</li>
                   <li>Встановлено, що сповільнення процесів консолідації під час вакуумного
                     спікання кераміки Yb<sup>3+</sup>:YAG у порівнянні з YAG та Nd<sup>3+</sup>:YAG обумовлено
                     меншою дифузійною рухливістю іонів ітербію у порівнянні з іонами неодиму
                     та ітрію, а також утворенням у кераміці Yb<sup>3+</sup>:YAG комплексів з іонів Yb<sup>2+</sup> і
-                    вакансій кисню (Yb<sub>y</sub>vacuumYb&prime;<sub>y</sub>+V<sub>0</sub> ). Збільшення іонного радіусу
+                    вакансій кисню (YbY&rarr;Yb&prime;Y+V0 ). Збільшення іонного радіусу
                     ітербію при відновленні до двозарядного стану призводить до додаткового
                     блокування дифузійної рухливості підградки ітрію.
                      <a href="http://doi.org/10.1016/j.jeurceramsoc.2017.05.023" target="blank">http://doi.org/10.1016/j.jeurceramsoc.2017.05.023</a>.</li>
@@ -256,7 +254,7 @@
                     традиційним методом вакуумного спікання. Реалізовано режими
                     консолідації монодисперсних частинок, при яких формується прозора
                     нанокераміка (Y<sub>0,99</sub>Eu<sub>0,01</sub>)<sub>2</sub>O<sub>3</sub> з розміром зерна 10-15 нм.
-                    Патенти України на винахід №96522, №101916</li>
+                    Патенти України на винахід №96522, №101916.</li>
                   <li>Оптимізовано технологічний маршрут отримання високолегованих
                     лазерних керамік (Y<sub>1-x</sub>Nd<sub>x</sub>)<sub>3</sub>Al<sub>5</sub>O<sub>12</sub> (x≤0,04) в умовах термічно-активованих
                     фазових перетворювань. Визначено основні чинники процесу
@@ -265,8 +263,7 @@
                     який забезпечує отримання кераміки з оптичними втратами на рівні 10-3 см-1
                     при 1064 нм, пористістю 10-3 об.% та диференційною ефективністю
                     лазерної генерації вище 60% при діодній накачці на 	&lambda;=808 нм
-                    Патент України на винахід № 108337
-                    </li>
+                    Патент України на винахід № 108337.</li>
                   <li>Отримано трирічний грант Національного фонду досліджень України за
                     конкурсом «Підтримка досліджень провідних та молодих учених», проєкт
                     «Новітні та традиційні ІЧ-прозорі кераміки складної архітектури для
