--- a/accounting-reporting-department.html
+++ b/accounting-reporting-department.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -106,7 +106,7 @@
           </div>
           <div class="peoples-list">
             <div class="card-people">
-              <div class="card-img"><img src="images/Орехова.jpg" alt="Орєхова"></div>
+              <div class="card-img"><img src="images/Orekhova.jpg" alt="Орєхова"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Завідувачка відділу</div>
@@ -128,7 +128,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Качарава.jpg" alt="Качарава"></div>
+              <div class="card-img"><img src="images/Kacharava.jpg" alt="Качарава"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Качарава Олена Володимирівна</div>
@@ -149,7 +149,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Різник.jpg" alt="Різник"></div>
+              <div class="card-img"><img src="images/Riznyk.jpg" alt="Різник"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Різник Ірина Іванівна</div>
@@ -169,7 +169,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Пушкарьова.jpg" alt="Пушкарьова"></div>
+              <div class="card-img"><img src="images/Pushkareva.jpg" alt="Пушкарьова"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Пушкарьова Ольга Петрівна</div>
@@ -189,7 +189,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Шморгун.jpg" alt="Шморгун"></div>
+              <div class="card-img"><img src="images/Shmorgun.jpg" alt="Шморгун"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Шморгун Віта Петрівна</div>
@@ -206,7 +206,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Бриж.jpg" alt="Бріж"></div>
+              <div class="card-img"><img src="images/Brig.jpg" alt="Бріж"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Бріж Валентина Пантеліївна</div>
