--- a/cmcc.html
+++ b/cmcc.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -110,7 +110,7 @@
           </div>
           <div class="peoples-list">
             <div class="card-people">
-              <div class="card-img"><img src="images/Явецький.jpg" alt="Явецький"></div>
+              <div class="card-img"><img src="images/Yavetsky.jpg" alt="Явецький"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Завідувач відділу</div>
@@ -134,7 +134,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Толмачов.jpg" alt="Толмачов О.В"></div>
+              <div class="card-img"><img src="images/Tolmachov.jpg" alt="Толмачов О.В"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Толмачов.pdf" class="people-name" target="blanck">Толмачов Олександр Володимирович</a>
@@ -155,7 +155,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Литвинов.jpg" alt="Литвинов"></div>
+              <div class="card-img"><img src="images/Litvinov.jpg" alt="Литвинов"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Литвинов_Відділ 7.pdf" class="people-name" target="blanck">Литвинов Леонід Аркадієвич</a>
@@ -175,7 +175,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Добротворська.jpg" alt="Добротворська"></div>
+              <div class="card-img"><img src="images/Dobrotvorska.jpg" alt="Добротворська"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Добротворська_Відділ 7.pdf" class="people-name" target="blanck">Добротворська Марія Вікторівна</a>
@@ -196,7 +196,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Дорошенко.jpg" alt="Дорошенко"></div>
+              <div class="card-img"><img src="images/Doroshenko.jpg" alt="Дорошенко"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Дорошенко_Відділ 7.pdf" class="people-name" target="blanck">Дорошенко Андрій Григорович</a>
@@ -217,7 +217,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Пархоменко.jpg" alt="Пархоменко"></div>
+              <div class="card-img"><img src="images/Parkhomenko.jpg" alt="Пархоменко"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Пархоменко_Відділ 7.pdf" class="people-name" target="blanck">Пархоменко Сергій Володимирович</a>
@@ -237,7 +237,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Крижановська.jpg" alt="Крижановська"></div>
+              <div class="card-img"><img src="images/Kryzhanovska.jpg" alt="Крижановська"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Крижановська_Відділ 7.pdf" class="people-name" target="blanck">Крижановська Олександра Сергіївна</a>
@@ -257,7 +257,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Сафронова.JPG" alt="Сафронова"></div>
+              <div class="card-img"><img src="images/Safronova.JPG" alt="Сафронова"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Сафронова_Відділ 7.pdf" class="people-name" target="blanck">Сафронова Надія Андріївна</a>
@@ -277,7 +277,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Ворона.jpg" alt="Ворона"></div>
+              <div class="card-img"><img src="images/Vorona.jpg" alt="Ворона"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Ворона_Відділ 7.pdf" class="people-name" target="blanck">Ворона Ігор Олегович</a>
@@ -298,7 +298,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Матейченко.jpg" alt="Матейченко"></div>
+              <div class="card-img"><img src="images/Mateichenko.jpg" alt="Матейченко"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Матейченко_Відділ 7.pdf" class="people-name" target="blanck">Матейченко Павло Вікторович</a>
@@ -318,7 +318,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Матвієнко.jpg" alt="Матвієнко"></div>
+              <div class="card-img"><img src="images/Matvienko.jpg" alt="Матвієнко"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Матвієнко_Відділ 7.pdf" class="people-name" target="blanck">Матвієнко Оксана Олегівна</a>
@@ -337,7 +337,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Балабанов.jpg" alt="Балабанов"></div>
+              <div class="card-img"><img src="images/Balabanov.jpg" alt="Балабанов"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Балабанов_Відділ 7.pdf" class="people-name" target="blanck">Балабанов Антон Едуардович</a>
@@ -357,7 +357,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Тимошенко.jpg" alt="Тимошенко"></div>
+              <div class="card-img"><img src="images/Tymoshenko.jpg" alt="Тимошенко"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd7/cv/CV_Тимошенко_Відділ 7.pdf" class="people-name" target="blanck">Тимошенко Арсеній Дмитрович</a>
