--- a/economic-operational-department.html
+++ b/economic-operational-department.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -105,7 +105,7 @@
           </div>
           <div class="peoples-list">
             <div class="card-people">
-              <div class="card-img"><img src="images/Гончарова.jpg" alt="Гончарова"></div>
+              <div class="card-img"><img src="images/Goncharova.jpg" alt="Гончарова"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Завідувачка відділу</div>
@@ -122,7 +122,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Пугін.jpg" alt="Пугін"></div>
+              <div class="card-img"><img src="images/Pugin.jpg" alt="Пугін"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Пугін Дмитро Олександрович</div>
@@ -143,7 +143,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Дригайло.jpg" alt="Дригайло"></div>
+              <div class="card-img"><img src="images/Drigailo.jpg" alt="Дригайло"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Дригайло Олексій Федорович</div>
