--- a/events-news.html
+++ b/events-news.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item uk-active"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -104,7 +104,7 @@
 						<div class="list-events-news js-filter">
 							<div class="card-news card-news-nanu">
 								<div class="card-img">
-									<img src="images/НАНУ.png" alt="НАНУ">
+									<img src="images/NASU.png" alt="НАНУ">
 									<div class="card-category">
 										<span>Новини НАНУ</span>
 									</div>
@@ -152,7 +152,7 @@
 							</div>
 							<div class="card-news card-competitions-grants">
 								<div class="card-img">
-									<img src="images/НАНУ.png" alt="НАНУ">
+									<img src="images/NASU.png" alt="НАНУ">
 									<div class="card-category">
 										<span>Конкурси і гранти</span>
 									</div>
