--- a/human-resources-department.html
+++ b/human-resources-department.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -91,10 +91,20 @@
 		<main id="main">
       <section class="section section-human-resources">
         <div class="container">
-          <h3>ВІДДІЛ КАДРІВ</h3>
+					<h3>ВІДДІЛ КАДРІВ</h3>
+					<div class="department-info">
+            <div class="quantity-people-department">
+              <div class="img-holder"><img src="images/employees.svg" alt="employees"></div>
+              <div class="text-info">
+                <ul class="quantity-people-list">
+                  <li>Кількість працівників: <strong>2</strong></li>
+                </ul>
+              </div>
+            </div>
+          </div>
           <div class="peoples-list">
             <div class="card-people">
-              <div class="card-img"><img src="images/Крупа.jpg" alt="Крупа"></div>
+              <div class="card-img"><img src="images/Krupa.jpg" alt="Крупа"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Завідувачка відділу</div>
@@ -115,7 +125,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Кайданник.jpg" alt="Кайданник"></div>
+              <div class="card-img"><img src="images/Kaydannyk.jpg" alt="Кайданник"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Кайданник Світлана Михайлівна</div>
