--- a/leadership.html
+++ b/leadership.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu " class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -94,7 +94,7 @@
           <h3>КЕРІВНИЦТВО ІНСТИТУТУ</h3>
           <div class="peoples-list">
             <div class="card-people">
-              <div class="card-img"><img src="images/Притула.jpg" alt="Притула І.М"></div>
+              <div class="card-img"><img src="images/Prytula.jpg" alt="Притула І.М"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Директор</div>
@@ -118,7 +118,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Верещак.jpg" alt="Верещак О.І"></div>
+              <div class="card-img"><img src="images/Vereshchak.jpg" alt="Верещак О.І"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заcтупник директора з загальних питань</div>
@@ -139,7 +139,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Толмачов.jpg" alt="Толмачов О.В"></div>
+              <div class="card-img"><img src="images/Tolmachov.jpg" alt="Толмачов О.В"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заступник директора з наукової роботи</div>
@@ -161,7 +161,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Лемишенко.jpg" alt="Лемишенко И.Г"></div>
+              <div class="card-img"><img src="images/Lemishenko.jpg" alt="Лемишенко И.Г"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заступниця директора з зовнішньоекономічної діяльності</div>
@@ -182,7 +182,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Кулик.jpg" alt="Кулик К.М"></div>
+              <div class="card-img"><img src="images/Kulyk.jpg" alt="Кулик К.М"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Учений секретар</div>
@@ -204,7 +204,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Бевзюк.jpg" alt="Бевзюк О.О"></div>
+              <div class="card-img"><img src="images/Bevzyuk.jpg" alt="Бевзюк О.О"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Головна юридична консультантка</div>
