--- a/noc.html
+++ b/noc.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -110,7 +110,7 @@
           </div>
           <div class="peoples-list">
             <div class="card-people">
-              <div class="card-img"><img src="images/Притула.jpg" alt="Притула І.М"></div>
+              <div class="card-img"><img src="images/Prytula.jpg" alt="Притула І.М"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Науковий керівник відділу</div>
@@ -194,7 +194,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/krivonosov.png" alt="Кривоносов"></div>
+              <div class="card-img"><img src="images/Krivonosov.jpg" alt="Кривоносов"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/25/cv/CV_krivonosov.pdf" class="people-name" target="blanck">Кривоносов Євгеній Володимирович </a>
