--- a/olc-publications.html
+++ b/olc-publications.html
@@ -45,7 +45,7 @@
           <nav class="navbar underline">
             <a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
             <ul class="navigation" id="navigation" hidden>
-              <li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+              <li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
               <li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
               <li class="navigation-item submenu-link uk-active">
                 <a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
