--- a/olc.html
+++ b/olc.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -110,7 +110,7 @@
           </div>
           <div class="peoples-list">
             <div class="card-people">
-              <div class="card-img"><img src="images/Ніжанковський.jpg" alt="Ніжанковський"></div>
+              <div class="card-img"><img src="images/Nizhankovsky.jpg" alt="Ніжанковський"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Завідувач відділу</div>
@@ -131,7 +131,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Гринь.png" alt="Гринь"></div>
+              <div class="card-img"><img src="images/Grin.png" alt="Гринь"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заступник завідувача відділу</div>
@@ -152,7 +152,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Шеховцов.jpg" alt="Шеховцов"></div>
+              <div class="card-img"><img src="images/Shekhovtsov.jpg" alt="Шеховцов"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/23/cv/CV_Шеховцов_Відділ 23.pdf" class="people-name" target="blanck">Шеховцов Олексій Миколайович</a>
@@ -212,7 +212,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Волошин.jpg" alt="Волошин"></div>
+              <div class="card-img"><img src="images/Voloshin.jpg" alt="Волошин"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/23/cv/CV_Волошин_Відділ 23.pdf" class="people-name" target="blanck">Волошин Олександр Вікторович</a>
@@ -231,7 +231,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Сидельникова.jpg" alt="Cідельнікова"></div>
+              <div class="card-img"><img src="images/Sidelnikova.jpg" alt="Cідельнікова"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/23/cv/CV_Сідельнікова_Відділ 23.pdf" class="people-name" target="blanck">Cідельнікова Наталія Степанівна</a>
@@ -250,7 +250,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Кривоногов.jpg" alt="Кривоногов"></div>
+              <div class="card-img"><img src="images/Kryvonohov.jpg" alt="Кривоногов"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/23/cv/CV_ Кривоногов_Відділ 23.pdf" class="people-name" target="blanck">Кривоногов Сергій Іванович </a>
@@ -269,7 +269,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Козловський.jpg" alt="Козловський"></div>
+              <div class="card-img"><img src="images/Kozlovsky.jpg" alt="Козловський"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/23/cv/CV_Козловський_Відділ 23.pdf" class="people-name" target="blanck">Козловський Анатолій Антонович</a>
@@ -288,7 +288,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Баранов.JPG" alt="Баранов"></div>
+              <div class="card-img"><img src="images/Baranov.JPG" alt="Баранов"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/23/cv/CV_Баранов_Відділ 23.pdf" class="people-name" target="blanck">Баранов Вячеслав Валерійович</a>
@@ -307,7 +307,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Сірик.jpg" alt="Сірик"></div>
+              <div class="card-img"><img src="images/Syrik.jpg" alt="Сірик"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/23/cv/CV_Сірик_Відділ 23.pdf" class="people-name" target="blanck">Сірик Юрій Вікторович</a>
