--- a/planning-production-department.html
+++ b/planning-production-department.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -105,7 +105,7 @@
           </div>
           <div class="peoples-list">
             <div class="card-people">
-              <div class="card-img"><img src="images/Судакова.jpg" alt="Судакова"></div>
+              <div class="card-img"><img src="images/Sudakova.jpg" alt="Судакова"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Завідувачка відділу</div>
@@ -125,7 +125,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Санін.jpg" alt="Санін"></div>
+              <div class="card-img"><img src="images/Sanin.jpg" alt="Санін"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Санін Володимир Фотійович</div>
@@ -145,7 +145,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Бабицкая Л.Е..jpg" alt="Бабицька"></div>
+              <div class="card-img"><img src="images/Babitskaya.jpg" alt="Бабицька"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Бабицька Людмила Євгенівна</div>
@@ -162,7 +162,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Гончарова-1.jpg" alt="Гончарова"></div>
+              <div class="card-img"><img src="images/Goncharova-1.jpg" alt="Гончарова"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Гончарова Оксана Володимирівна</div>
@@ -182,7 +182,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Прохорова.jpg" alt="Прохорова"></div>
+              <div class="card-img"><img src="images/Prokhorova.jpg" alt="Прохорова"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Прохорова Ірина Володимирівна</div>
@@ -202,7 +202,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Волкова.jpg" alt="Волкова"></div>
+              <div class="card-img"><img src="images/Volkova.jpg" alt="Волкова"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Волкова Каріна Касімівна</div>
@@ -219,7 +219,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Ніконова.jpg" alt="Ніконова"></div>
+              <div class="card-img"><img src="images/Nikonova.jpg" alt="Ніконова"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-name">Ніконова Вікторія Анатоліївна</div>
