--- a/tcfs.html
+++ b/tcfs.html
@@ -45,7 +45,7 @@
 				<nav class="navbar underline">
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
-						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="index.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link uk-active">
 							<a href="#structure-submenu" class="navigation-link uk-button" type="button">СТРУКТУРА</a>
@@ -109,7 +109,7 @@
           </div>
           <div class="peoples-list">
             <div class="card-people">
-              <div class="card-img"><img src="images/яновский.jpg" alt="Притула І.М"></div>
+              <div class="card-img"><img src="images/Yanovsky.jpg" alt="Притула І.М"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Завідувач відділу</div>
@@ -133,7 +133,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/филь.jpg" alt="Філь"></div>
+              <div class="card-img"><img src="images/fil.jpg" alt="Філь"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV_Філь_Відділ 1.pdf" class="people-name" target="blanck">Філь Дмитро Вячеславович</a>
@@ -153,7 +153,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/бродский.jpg" alt="Бродський"></div>
+              <div class="card-img"><img src="images/brodsky.jpg" alt="Бродський"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV_Бродський_Відділ 1.pdf" class="people-name" target="blanck">Бродський Роман Євгенійович</a>
@@ -173,7 +173,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/ратнер.pg.jpg" alt="Ратнер"></div>
+              <div class="card-img"><img src="images/ratner.jpg" alt="Ратнер"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV_Ратнер_Відділ 1.pdf" class="people-name" target="blanck">Ратнер Марина Анатоліївна</a>
@@ -193,7 +193,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Кулик.jpg" alt="Кулик"></div>
+              <div class="card-img"><img src="images/Kulyk.jpg" alt="Кулик"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV_Kulyk_DOI.pdf" class="people-name" target="blanck">Кулик Костянтин Миколайович</a>
@@ -213,7 +213,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/копп.png" alt="Копп"></div>
+              <div class="card-img"><img src="images/kopp.png" alt="Копп"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV_Копп_Відділ 1.pdf" class="people-name" target="blanck">Копп Михайло Йосипович</a>
@@ -232,7 +232,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/кравченко.jpg" alt="Кравченко"></div>
+              <div class="card-img"><img src="images/kravchenko.jpg" alt="Кравченко"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV_Кравченко_Відділ 1.pdf" class="people-name" target="blanck">Кравченко Людмила Юріївна</a>
@@ -251,7 +251,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/масловский.jpg" alt="Масловський"></div>
+              <div class="card-img"><img src="images/Maslovsky.jpg" alt="Масловський"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV_Масловський_Відділ 1.pdf" class="people-name" target="blanck">Масловський Юрій Миколайович</a>
@@ -270,7 +270,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/наплеков.png" alt="Наплеков"></div>
+              <div class="card-img"><img src="images/naplekov.png" alt="Наплеков"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV_Наплеков_Відділ 1.pdf" class="people-name" target="blanck">Наплеков Дмитро Михайлович</a>
@@ -289,7 +289,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/гермаш.png" alt="Гермаш"></div>
+              <div class="card-img"><img src="images/hermash.png" alt="Гермаш"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/otd1/cv/CV _Гермаш_Відділ 1.pdf" class="people-name" target="blanck">Гермаш Костянтин Володимирович</a>
